# routes/auth.js
@@ -1,0 +1,9 @@
+const express = require('express');
+const router = express.Router();
+const controller = require('../controllers/authController');
+
+// Local login/register routes
+router.post('/register', controller.register);
+router.post('/login', controller.login);
+
+module.exports = router;
