# routes/index.js
@@ -1,10 +1,35 @@
 const routes = require('express').Router();
 const products = require('./products');
 const movements = require('./movements');
+const auth = require('./auth');
+const passport = require('passport');
 
+routes.use('/auth', auth);
 routes.use('/products', products);
 routes.use('/movements', movements);
 routes.use('/', require('./swagger'));
+routes.get('/login', passport.authenticate('github'), (req, res) => {});
+
+// routes.get('/logout', function(req, res, next) {
+//   req.logout(function(err) {
+//     if (err) { return next(err); }
+//     res.redirect('/');
+//   });
+// });
+
+routes.get('/logout', function(req, res, next) {
+  req.logout(function(err) {
+    if (err) { return next(err); }
+    req.session.destroy(function(err) {
+        if (err) {
+            console.error("Error al destruir la sesión:", err);
+            return next(err);
+        }
+        res.clearCookie('connect.sid'); 
+        res.redirect('/');
+    });
+  });
+});
 
 routes.get('/', (req, res) => {
   res.status(200).send(`
